# advent_2022

./: README.md  WORKSPACE  requirements.txt  requirements_lock.txt
input/: BUILD.bazel
python/: BUILD.bazel  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  main.py  util.py
tools/: BUILD.bazel  update_requirements.sh
